--- a/_posts/2015-01-26-asp.net---create-an-owin-middleware-to-trigger-a-permanent-redirect.md
+++ b/_posts/2015-01-26-asp.net---create-an-owin-middleware-to-trigger-a-permanent-redirect.md
@@ -16,11 +16,11 @@ shortinfo:
 
 #### OWIN core components
 
-OWIN has a very nice and easy to understand architecture as it is closer to HTTP protocol and doesn't assume any functionality is there because of the hosting layer. All the manipulation has to do with the two main objects that is an HttpRequestMessage and HttpResponseMessage. This is a really good choice of abstracting the actual HTTP layer and it's an architecture that is very familiar to developers from other platforms like [node.js][node]. On top of this another very interesting and well known pattern that exists also in [Express][express] framework is the middlewares. A middleware is a really simple piece of code that gets a request object as a parameter and can either transform this request and pass it to the next middleware if present or create a response and don't allow the request to further executer on the server. So a web application could potentially consist of several middlewares that are executed one after the other.
+OWIN has a very nice and easy to understand architecture as it is closer to HTTP protocol and doesn't assume any functionality is there because of the hosting layer. All the manipulation has to do with the two main objects that is an HttpRequestMessage and HttpResponseMessage. This is a really good choice of abstracting the actual HTTP layer and it's an architecture that is very familiar to developers from other platforms like [node.js][node]. On top of this another very interesting and well known pattern that exists also in [Express][express] framework is the middlewares. A middleware is a really simple piece of code that gets a request object as a parameter and can either transform this request and pass it to the next middleware if present or create a response and don't allow the request to further execute on the server. So a web application could potentially consist of several middlewares that are executed one after the other.
 
 #### OWIN middleware details
 
-The bare minimum OWIN middleware could look like the code above which the only thing it does is to just write some statements as diagnostic and lets the request to proceed by calling the next middleware in the pipeline. 
+The bare minimum OWIN middleware could look like the code below which the only thing it does is to write some statements as diagnostic and lets the request to proceed by calling the next middleware in the pipeline. 
 
 {% highlight c# %}
 public class MinimumMiddleware
@@ -54,7 +54,7 @@ public partial class Startup {
 
 #### Trigger a redirect from a middleware
 
-This is the basic implementation that gives us just a dictionary of string and object and into this dictionary exist all the useful info like the request itself and many more. A better option is to derive from OwinMiddleware class that gives us access to all the request specific info in a strongly type manner through IOwinContext interface. In the code that follows we can see an example of triggering a permanent redirect from an OWIN middleware and don't let the request to further processed by the application.
+The implementation above gives us just a dictionary of string and object and into this dictionary exists all the useful info like the request itself. A better option is to derive from OwinMiddleware class that gives us access to all the request specific data in a strongly type manner through IOwinContext interface. In the code that follows we can see an example of triggering a permanent redirect from an OWIN middleware and don't let the request to further processed by the application.
 
 {% highlight c# %}
 public class CheckUrlMiddleware : OwinMiddleware
