Syntax fixes for post about using asp.net vnext with webpack

--- a/_posts/2015-05-17-asp.net-vnext-with-webpack.md
+++ b/_posts/2015-05-17-asp.net-vnext-with-webpack.md
@@ -12,15 +12,15 @@ shortinfo: Asp.net vNext is the next version of the well know web stack framewor
 
 #### Why I was absent
 
-It is a long time from my last post but so much have happened during this time period. Initially I was involved in the organization of local [Global Azure Bootcamp][bootcamp] in [Thessaloniki][skgazure]. It was our first attempt to organize such an event and we are very satisfied by the result. It is an amazing feeling to be part of a global community for one day. Right after Azure Bootcamp, Microsoft's biggest development conference took place in San Fransisco. At [Build][build] tons of new features were announced and I am still straggling to watch all the interesting videos on [Channel 9][channel9]. Lastly I attended the first international development conference that is organized in the city I am living, in Thessaloniki. [Devit][devit] took place on Friday 15th of May and it was very successful and amazingly well organized.
+It is a long time from my last post but so much have happened during this time period. Initially I was involved in the organization of local [Global Azure Bootcamp][bootcamp] in [Thessaloniki][skgazure]. It was our first attempt to organize an one day event and we are very satisfied by the result. It is an amazing feeling to be part of a global community for one day. Right after Azure Bootcamp, Microsoft's biggest development conference took place in San Fransisco. At [Build][build] tons of new features were announced and I am still straggling to watch all the interesting videos on [Channel 9][channel9]. Lastly I attended the first international development conference that was organized in the city I am living, in Thessaloniki. [Devit][devit] took place on Friday 15th of May and it was very successful and amazingly well organized conference.
 
 #### ASP.NET vNext
 
-[asp.net vNext][vnext] is the next version of the well know web stack framework and I won't describe it at all as it's quite easy to find details about it. It's not yet production ready but this point comes really close. I am very interested on this new web stack and the direction it gets so I am playing with it when the time permits. Among the other changes the core team has done, they also changed the way the client side package management is done. The framework adopts well known practices on the field and adds to the core system tools like [npm][npm] and [bower][bower] package managers and gulp and grunt tasks runners. For the people that are not familiar with basic [nodejs][node] development and client side package management they should spend some time and study those as it's part of the next version of asp.net. An excellent place to start the reading is the newly added official [documentation site][aspdoc] of asp.net vNext.
+[asp.net vNext][vnext] is the next version of the well know web stack framework and I won't describe it at all as it's quite easy to find details about it. It's not yet production ready but that point comes really close. I am very interested on this new web stack and the direction it gets so I am playing with it when the time permits. Among the other changes the core team has done, they also changed the way the client side package management is done. The framework adopts well known practices on the field and adds to the core system tools like [npm][npm] and [bower][bower] package managers and [gulp][gulp] and [grunt][grunt] tasks runners. For the people that are not familiar with basic [nodejs][node] development and client side package management they should spend some time and study those as it's part of the next version of asp.net. An excellent place to start the reading is the newly added official [documentation site][aspdoc] of asp.net vNext.
 
 #### Client side package management and webpack
 
-During the last months in my work I am heavily involved on developing a large [Reactjs][react] application. For this reason we need to use a lot of node and bower packages something that makes the usage of a module bundler an absolute requirement. After some investigation we chose to use [webpack][webpack] as it is very popular, it has an actively community behind id and it fits perfect with react development. One of the biggest features of webpack is that it allows to use node packages directly inside the browser.
+During the last months in my work I am heavily involved on developing a large [Reactjs][react] application. For this reason we need to use a lot of node and bower packages something that makes the usage of a module bundler an absolute requirement. After some investigation we chose to use [webpack][webpack] as it is very popular, it has an active community behind it and it fits perfect with react development. One of the greatest features of webpack is that it allows to use node packages directly inside the browser.
 
 #### Combine ASP.NET vNext with webpack
 
@@ -72,7 +72,7 @@ After a while you should see Started on the command line and if you navigate to 
 
 #### JavaScript dependencies management
 
-The application is really basic and what it does is after entering a number in the textbox and pressing submit renders some Lorem ipsum text on the screen. The code for this exists in the index.cshtml file is pretty basic and easy to understand. But the interesting is how the Lorem global variable is available. This is done because in the _Layout.cshtml we include the app.bunle.js file which was generated by webpack when we executed the gulp development command. If you try to explore this file you would probably feel a bit confused as it contains many lines of code. But let's take one step back to see where this file came from. 
+The application is really basic and what it does is after entering a number in the textbox and pressing submit renders some Lorem ipsum text on the screen. The code for this exists in the index.cshtml file is pretty basic and easy to understand. But the interesting is how the Lorem global variable is available. This is done because in the _Layout.cshtml we include the app.bunle.js file which was generated by webpack when we executed the gulp development command. If you try to explore this file you would probably feel a bit confused as it contains many lines of code. But let's take one step back and see where this file came from. 
 
 Let's start by looking at the file lorem.js which the content is following
 
@@ -95,7 +95,7 @@ let Lorem = {
 export default Lorem;
 {% endhighlight %}
 
-As you can see we can use the new ES6 module system thanks to webpack and the [babel loader][babelloader]. The lorem-hipsum is just on ordinal node package that we can consume directly inside our browser scripts. Also we export the the object Lorem we created in the file. The object just contains a simple method that uses the node package to add some random text to the provided element. You should also notice that we can use the new way of declaring functions.
+As you can see we can use the new ES6 module system thanks to webpack and the [babel loader][babelloader]. The lorem-hipsum is just on ordinal node package that we can consume directly inside our browser scripts. Also we export the object Lorem we created in the file. The object just contains a simple method that uses the node package to add some random text to the provided element. You should also notice that we can use the new way of declaring functions.
 
 The next important piece in the procedure is the app.js file which contains only two lines of code.
 
@@ -123,11 +123,13 @@ Here you can see that this is a regular scss file but we have imported a module 
 
 #### Additional points
 
-The current default template manages the predefined libraries in a way that could potentially implemented in a different way. For example the current implementation copies the into the lib folder the packages that are hard copied inside the gulpfile and most specifically in copy command. This is not very flexible as it requires every time that a new dependency is added the modification of this file as well. A possible solution to this would be to require all this dependencies in the app.js file and let webpack to create the final bundle. I have also include a gulp task that creates the minified versions of all the bundles that should always been used in production environment.
+The current default template manages the predefined libraries in a way that could potentially implemented in a different way. For example the current implementation copies into the lib folder the packages that are hard copied inside the gulpfile and most specifically in copy command. This is not very flexible as it requires every time that a new dependency is added the modification of this file as well. A possible solution to this would be to require all this dependencies in the app.js file and let webpack to create the final bundle. 
+
+I have also include a gulp task that creates the minified versions of all the bundles that should always been used in production environment.
 
 #### The next blog post
 
-The next post which will come soon will be somehow expand this one and describe how we can build a full isomorphic JavaScript application with asp.net vNext, [React.js][react], [Reactjs.net][reactnet] and [webpack][webpack].
+The next post which will come soon will expand this one and will describe how we can build a full isomorphic JavaScript application with asp.net vNext, [React.js][react], [Reactjs.net][reactnet] and [webpack][webpack].
 
 
 [bootcamp]: http://global.azurebootcamp.net/
