Add example image of hot loading

--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -78,14 +78,16 @@ The output is quite simple but it demonstrates most of the features that will be
 
 <div class="row">
    <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-        <a href="/assets/images/" class="select node folder">
-            <img src="/assets/images/" alt="select node folder">      
+        <a href="/assets/images/hotloading.gif" class="select node folder">
+            <img src="/assets/images/hotloading.gif" alt="select node folder">      
         </a>
    </div>
 </div>
 
 The component actually has two counters. The first just counts the seconds since it was loaded in the page and the second the number of rerenders. Initially is maybe hard to understand the difference but once you will start
-changing the component you can see that the rerender counter will be increased more than time elapsed. 
+changing the component you can see that the rerender counter will be increased more than time elapsed as any chnage in the component will trigger an extra render.
+
+
 
 [webpack]: http://webpack.github.io/
 [nuget]: https://www.nuget.org/packages/Webpack/
