--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -56,12 +56,12 @@ After finishing that you are ready to start the application by executing dnx web
 If no configuration is present will start on localhost:4000. The webpack-dev-server logs to the same console as asp.net does and you can get a nice indication on what happening.
 After the initial launch and when everything is fine you should have in the output console an output like the following:
 
-```
+{% highlight c# %}
   [279] ./~/react-deep-force-update/lib/index.js 1.29 kB {0} [built]
   [280] ./~/global/window.js 243 bytes {0} [built]
   [281] ./app/components/counter.jsx 3.63 kB {0} [built]
   webpack: bundle is now VALID.
-```
+{% endhighlight %}
 
 And if you open browse the project (localhost:5000 by default) you should get a screen like the once that follows:
 
@@ -77,7 +77,7 @@ The output is quite simple but it demonstrates most of the features that will be
 **The amazing thing is that we can edit both the styles and the output of the component without loosing it's state**
 
 <div class="row">
-   <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+   <div class="col-sm-6 col-sm-offset-3 col-md-8 col-md-offset-2">
         <a href="/assets/images/hotloading.gif" class="select node folder">
             <img src="/assets/images/hotloading.gif" alt="select node folder">      
         </a>
