Fix all the broken links

--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -11,31 +11,31 @@ shortinfo:
 ---
 
 ### Introduction
-This is the first of the two parts blog series about using [webpack](webpack) and the corresponding [nuget package](nuget) I created together with an asp.net 5 application.
+This is the first of the two parts about using [webpack][webpack] and the corresponding [nuget package][nuget] I created, in an asp.net 5 application.
 This part acts as an introduction to the reasons behind the need for an alternative approach of static asset management and JavaScript module bundling in an asp.net 5 application.
-Besides that includes a brief explanation of an example Reactjs application that uses the webpack nuget package. In the second part we explore the internals of the nuget package itself and dig into webpack's details. 
+Besides that includes a brief explanation of an example Reactjs application that uses the webpack nuget package. In the second part we will explore the internals of the nuget package itself and dig into webpack's details. 
 
 ### Connection to the past
-A long time ago I wrote a [post](previous-post) about using [webpack](webpack)
-in an asp.net 5 (vnext at that point) application. I ended that post saying that another post would come with a full isomorphic JavaScript application in asp.net with [React.js](react) and webpack.
-Unfortunatelly I didn't keep that promise but I am very positive this will happen in the future especially after we will be able to use the amazing [Edge.js](edgejs) library for server side rendering of React.js components.
-In the meantime I was involved in several React projects and in all of them was using webpack so I had the change to really dig into the tool and learn it in a good detail.
+A long time ago I wrote a [post][previous-post] about using [webpack][webpack]
+in an asp.net 5 (vnext at that point) application. I ended that post saying that another post would come with a full isomorphic JavaScript application in asp.net with [React.js][react] and webpack.
+Unfortunatelly I didn't keep that promise but I am very optimistic this will happen in the future especially after we will be able to use the amazing [Edge.js][edgejs] library for server side rendering of React.js components.
+In the meantime I was involved in several React projects and in all of them was using webpack so I had the change to really dig into the tool and learn it deeply.
 
 ### Why to use webpack
 The last personal side project I am working on is a Reactjs application with asp.net 5 as server side platform this time. I really like the new approach from asp.net platform and the flexibility it provides.
 In the tooling section though, there is still plenty of room for improvement. As mentioned above I was involved in several Reactjs projects and none of them was using asp.net as back end. I learned a lot during that time
-but I was also a bit frustrated about the lack of tooling in .net ecosystem. As I highlighted in my [related blog post](previous-post) the new template provides a new and better way for client side dependencies maangement
-through tools like [bower](bower), [gulp](gulp) and [grunt](grunt). My sense though is that community walks away from this approach and there is a tendency to use just npm modules even for client side packages and not [bower](bower).
-On top of that more and more projects use npm scripts and webpack for executing tasks instead of [gulp](gulp) or [grunt](grunt) something I really like as it removes a dependency and a corresponding configuration file from the project.
-Finally I really suggest to watch [Jonathan Creamer](jonathan) [talk](talk) on some advanced features of webpack.
+but I was also a bit frustrated about the lack of tooling in .net ecosystem. As I highlighted in my [related blog post][previous-post] the new template provides a new and better way for client side dependencies maangement
+through tools like [bower][bower], [gulp][gulp] and [grunt][grunt]. My sense though is that community walks away from this approach and there is a tendency to use just npm modules even for client side packages and not [bower][bower].
+On top of that more and more projects use npm scripts and webpack for executing tasks instead of [gulp][gulp] or [grunt][grunt] something I really like as it removes a dependency and a corresponding configuration file from the project.
+Finally I really suggest to watch [Jonathan Creamer][jonathan] [talk][talk] on some advanced features of webpack.
 
 ### Which problem the library solves
-One of the most valuable features of webpack is the accompanied [development server](devserver) and the live reload it provides when saving a file.
+One of the most valuable features of webpack is the accompanied [development server][devserver] and the live reload it provides when saving a file.
 Of course this is not something new as there are tools that doing this already but where webpack-dev-server shines is that does this without reloading the page.
 This happens be default for stylesheets. When using Reactjs we have exactly the same behaviour by using the appropriate configuration something that is extremelly powerfull as we dont's loose the application's state from a full page refresh.
 What it was frustrated and lead me to create that library is the fact that I had first to start webpack-dev-server and then start my project through Visual Studio or command line in a different platform.
 On top of that I had to do all the webpack configuration and add the correct script tags in my schtml layout files. The webpack-dev-server could serve static html files as well and inject the approperiate scripts automatically
-but then you end up to have your appication running in a diffrent location than the back end during development and have to solve all the [CORS](cors) issues.
+but then you end up to have your appication running in a diffrent location than the back end during development and have to solve all the [CORS][cors] issues.
 So I wish I had an extension method like the following in order to take care of the basic configuration and lunch the appropariate tool every time I am starting my asp.net project.       
 
 {% highlight c# %}
@@ -47,20 +47,20 @@ app.UseWebpack(new WebpackOptions() {
 });	
 {% endhighlight %}
 
-And this is exactly the [Webpack nuget package](nuget) provides.
+And this is exactly the [Webpack nuget package][nuget] provides.
 
 ### A concrete example
-In ordet to demonstrate webpack in an asp.net 5 in a better way I have a created a boilerplate application in [Github](project).
+In ordet to demonstrate webpack in an asp.net 5 in a better way I have a created a boilerplate application in [Github][project].
 Once you copy the repository you need to execute dnu restore and dnu build as usual from the command line to download all the nuget packages and after this npm install to install the required node packages that are a few.
 After finishing that you are ready to start the application by executing dnx web. This will start the normal asp.net server but the webpack-dev-server too in the address that is provided in the configuration.
 If no configuration is present will start on localhost:4000. The webpack-dev-server logs to the same console as asp.net does and you can get a nice indication on what happening.
 After the initial launch and when everything is fine you should have in the output console an output like the following:
 
 {% highlight c# %}
-  [279] ./~/react-deep-force-update/lib/index.js 1.29 kB {0} [built]
-  [280] ./~/global/window.js 243 bytes {0} [built]
-  [281] ./app/components/counter.jsx 3.63 kB {0} [built]
-  webpack: bundle is now VALID.
+[279] ./~/react-deep-force-update/lib/index.js 1.29 kB {0} [built]
+[280] ./~/global/window.js 243 bytes {0} [built]
+[281] ./app/components/counter.jsx 3.63 kB {0} [built]
+webpack: bundle is now VALID.
 {% endhighlight %}
 
 And if you open browse the project (localhost:5000 by default) you should get a screen like the once that follows:
@@ -86,7 +86,6 @@ The output is quite simple but it demonstrates most of the features that will be
 
 The component actually has two counters. The first just counts the seconds since it was loaded in the page and the second the number of rerenders. Initially is maybe hard to understand the difference but once you will start
 changing the component you can see that the rerender counter will be increased more than time elapsed as any chnage in the component will trigger an extra render.
-
 
 
 [webpack]: http://webpack.github.io/
