Correct typos and better structure the content

--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -32,11 +32,12 @@ Finally I really suggest to watch [Jonathan Creamer][jonathan] [talk][talk] on s
 ### Which problem the library solves
 One of the most valuable features of webpack is the accompanied [development server][devserver] and the live reload it provides when saving a file.
 Of course this is not something new as there are tools that doing this already but where webpack-dev-server shines is that does this without reloading the page.
-This happens be default for stylesheets. When using Reactjs we have exactly the same behaviour by using the appropriate configuration something that is extremelly powerfull as we dont's loose the application's state from a full page refresh.
+This happens by default for stylesheets. When using Reactjs we have exactly the same behaviour by using the appropriate configuration something that is extremelly powerfull as we dont's loose the application's state from a full page refresh.
+
 What it was frustrated and lead me to create that library is the fact that I had first to start webpack-dev-server and then start my project through Visual Studio or command line in a different platform.
-On top of that I had to do all the webpack configuration and add the correct script tags in my schtml layout files. The webpack-dev-server could serve static html files as well and inject the approperiate scripts automatically
+On top of that I had to do all the webpack configuration and add the correct script tags in my cshtml layout files. The webpack-dev-server could serve static html files as well and inject the approperiate scripts automatically
 but then you end up to have your appication running in a diffrent location than the back end during development and have to solve all the [CORS][cors] issues.
-So I wish I had an extension method like the following in order to take care of the basic configuration and lunch the appropariate tool every time I am starting my asp.net project.       
+So during all these cycles I realised I should automate all these steps, from basic configuration to launch the right tool every time I am starting my asp.net project. The configuration the [nuget package][nuget] provides looks like:       
 
 {% highlight c# %}
 app.UseWebpack(new WebpackOptions() {
@@ -47,14 +48,12 @@ app.UseWebpack(new WebpackOptions() {
 });	
 {% endhighlight %}
 
-And this is exactly the [Webpack nuget package][nuget] provides.
-
 ### A concrete example
-In ordet to demonstrate webpack in an asp.net 5 in a better way I have a created a boilerplate application in [Github][project].
+In order to demonstrate webpack in an asp.net 5 in a better way I have created a boilerplate application in [Github][project].
 Once you copy the repository you need to execute dnu restore and dnu build as usual from the command line to download all the nuget packages and after this npm install to install the required node packages that are a few.
-After finishing that you are ready to start the application by executing dnx web. This will start the normal asp.net server but the webpack-dev-server too in the address that is provided in the configuration.
-If no configuration is present will start on localhost:4000. The webpack-dev-server logs to the same console as asp.net does and you can get a nice indication on what happening.
-After the initial launch and when everything is fine you should have in the output console an output like the following:
+After finishing that, you are ready to start the application by executing dnx web. This will start the normal asp.net server but the webpack-dev-server too in the address that is provided in the configuration.
+If no configuration is present will start on localhost:4000. The webpack-dev-server logs to the same console as asp.net does and you can get a nice indication on what is happening.
+After the initial launch and when everything is fine you should have in the console an output like the following:
 
 {% highlight c# %}
 [279] ./~/react-deep-force-update/lib/index.js 1.29 kB {0} [built]
@@ -63,7 +62,7 @@ After the initial launch and when everything is fine you should have in the outp
 webpack: bundle is now VALID.
 {% endhighlight %}
 
-And if you open browse the project (localhost:5000 by default) you should get a screen like the once that follows:
+And if you browse to the project (http://localhost:5000 by default) you should get a screen like the one that follows:
 
 <div class="row">
    <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
@@ -73,7 +72,9 @@ And if you open browse the project (localhost:5000 by default) you should get a 
    </div>
 </div>
 
-The output is quite simple but it demonstrates most of the features that will be used in a real application as well. It contains a statefull component that has some basic styling though sass.
+The output is quite simple but it demonstrates most of the features that will be used in a real application as well. It contains a statefull component that has some basic styling through sass.
+The component actually has two counters. The first just counts the seconds since it was loaded in the page and the second the number of rerenders. Initially is maybe hard to understand the difference but once you will start
+changing the component you can see that the rerender counter will be increased more than time elapsed as any chnage in the component will trigger an extra render.
 **The amazing thing is that we can edit both the styles and the output of the component without loosing it's state**
 
 <div class="row">
@@ -83,9 +84,6 @@ The output is quite simple but it demonstrates most of the features that will be
         </a>
    </div>
 </div>
-
-The component actually has two counters. The first just counts the seconds since it was loaded in the page and the second the number of rerenders. Initially is maybe hard to understand the difference but once you will start
-changing the component you can see that the rerender counter will be increased more than time elapsed as any chnage in the component will trigger an extra render.
 
 
 [webpack]: http://webpack.github.io/
