Add additional notes section

--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -85,6 +85,22 @@ changing the component you can see that the rerender counter will be increased m
    </div>
 </div>
 
+### Additional notes
+- Used only during development
+
+   This is a library that should be used only during development environment and should not be part of any production system.
+   To be sure you are staring in a development environment from the command line you need to execute `dnx web ASPNET_ENV=Development`.
+   
+- Cross platform solution for live reload of static resources in asp.net 5 applications
+
+   As mentioned before there are some other tools that provide live reload functionality. This is a well tested solution for an asp.net 5 application that works cross platform.
+   Actually I developed the boilerplate project in OSX by using [Visual Studio Code][code]
+
+- What about production
+
+   Webpack is a great tool for preparing the production bundles too as it can handle minification, separete vendor scripts from our code and support async loaded of the scripts.
+   This subject requires a separate blog post itself.
+
 
 [webpack]: http://webpack.github.io/
 [nuget]: https://www.nuget.org/packages/Webpack/
@@ -99,3 +115,4 @@ changing the component you can see that the rerender counter will be increased m
 [jonathan]: https://twitter.com/jcreamer898
 [talk]: https://www.youtube.com/watch?v=MzVFrIAwwS8
 [project]: https://github.com/xabikos/aspnet5-react-webpack-boilerplate
+[code]: https://code.visualstudio.com/
