Fix additional notes

--- a/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
+++ b/_posts/2015-12-15-asp.net-5-and-webpack-part-1.md
@@ -96,10 +96,10 @@ changing the component you can see that the rerender counter will be increased m
    As mentioned before there are some other tools that provide live reload functionality. This is a well tested solution for an asp.net 5 application that works cross platform.
    Actually I developed the boilerplate project in OSX by using [Visual Studio Code][code]
 
-- What about production
+- Production bundles
 
-   Webpack is a great tool for preparing the production bundles too as it can handle minification, separete vendor scripts from our code and support async loaded of the scripts.
-   This subject requires a separate blog post itself.
+   Webpack is a great tool for preparing the production bundles too as it can handle minification, create separate bundle for vendor scripts and support async loading of the bundles.
+   The tool has many more capabilities and would require a separate blog post to describe it.
 
 
 [webpack]: http://webpack.github.io/
